RESOLVED FIXED140813
Web Inspector: Object Previews in Indexed DB tables
https://bugs.webkit.org/show_bug.cgi?id=140813
Summary Web Inspector: Object Previews in Indexed DB tables
Joseph Pecoraro
Reported 2015-01-22 21:05:43 PST
* SUMMARY Objects in Indexed DB Tables should have previews. More useful at a glance. * STEPS TO REPRODUCE 1. Inspect <http://www.html5rocks.com/en/tutorials/indexeddb/todo/> 2. Add a Todo item on the page 3. Select todo table in the Resources sidebar => table should show the object with a preview * NOTES - Object Previews support to be added in bug 129204
Attachments
[PATCH] Proposed Fix (9.73 KB, patch)
2015-03-16 15:36 PDT, Joseph Pecoraro
timothy: review+
[IMAGE] UI - What it looks like (123.22 KB, image/png)
2015-03-16 15:37 PDT, Joseph Pecoraro
no flags
Radar WebKit Bug Importer
Comment 1 2015-01-22 21:06:15 PST
Joseph Pecoraro
Comment 2 2015-03-16 15:36:53 PDT
Created attachment 248756 [details] [PATCH] Proposed Fix
Joseph Pecoraro
Comment 3 2015-03-16 15:37:26 PDT
Created attachment 248757 [details] [IMAGE] UI - What it looks like
Timothy Hatcher
Comment 4 2015-03-16 16:05:41 PDT
Comment on attachment 248756 [details] [PATCH] Proposed Fix Should tweak the border color shown between cells when the row is selected. It is too blue now. Maybe hsl(210, 90%, 80%)?
Joseph Pecoraro
Comment 5 2015-03-16 21:42:57 PDT
Note You need to log in before you can comment on or make changes to this bug.